# economic-youtube-action-items-skill

./: .env.example  README.md  SKILL.md  pyproject.toml
contracts/v1/: action_items.schema.json
contracts/v1/examples/: valid.complete.json  valid.ended_live.json  valid.partial.json
docs/: state-machine.md
src/economic_youtube_action_items_skill/: cli.py  models.py  pipeline.py  processor.py  render.py  settings.py  state_machine.py  youtube.py
tests/: test_channel_input.py  test_contract_v1.py  test_render.py  test_result_store.py  test_session_logger.py  test_state_machine.py  test_transcript_diagnostics.py
