[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "economic-youtube-action-items-skill"
version = "0.1.0"
description = "Extract actionable items from economic YouTube transcripts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "GBDO" }]
dependencies = [
  "youtube-transcript-api>=1.2,<2"
]

[project.scripts]
eyt-action-items = "economic_youtube_action_items_skill.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
